dbus-derive/tests/ui/not-a-valid-struct.stderr
error: dbus_derive::DbusArgs does not support enum
 --> tests/ui/not-a-valid-struct.rs:4:5
  |
4 | pub enum Arg {
  |     ^^^^

error: dbus_derive::DbusArgs does not support union
  --> tests/ui/not-a-valid-struct.rs:10:5
   |
10 | pub union Arg2 {
   |     ^^^^^

error: dbus_derive::DbusArgs does not support unit structs
  --> tests/ui/not-a-valid-struct.rs:15:10
   |
15 | #[derive(DbusArgs)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `DbusArgs` (in Nightly builds, run with -Z macro-backtrace for more info)
